<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutMainDiaryActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.school.jakub.trainingplanmaker.controller.diary.DiaryActivity">

    <include
        android:id="@+id/diary_activity_toolbar"
        layout="@layout/activity_toolbar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/diary_background2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diary_activity_toolbar">


        <ImageView
            android:id="@+id/diary_activity_arrowback"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_backarrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/diary_activity_textdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:text="Date"
            android:textAlignment="center"
            android:textSize="26dp"
            app:layout_constraintBottom_toBottomOf="@+id/diary_activity_arrownext"
            app:layout_constraintEnd_toStartOf="@+id/diary_activity_arrownext"
            app:layout_constraintStart_toEndOf="@+id/diary_activity_arrowback"
            app:layout_constraintTop_toTopOf="@+id/diary_activity_arrowback" />

        <ImageView
            android:id="@+id/diary_activity_arrownext"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/ic_arrowforward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/diary_activity_add_exercise"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Dodaj ćwiczenie"
            android:background="@drawable/button_style1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/diary_activity_add_plan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="Dodaj plan"
            android:background="@drawable/button_style1"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ListView
            android:id="@+id/diary_activity_listview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="60dp"
            android:layout_marginTop="8dp"
            android:divider="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/diary_activity_textdate" />

    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>
