...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.school.jakub.trainingplanmaker.controller.measurement.ProfileMeasurementActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/profile_measurement_activity_toolbar"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
...
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/profile_measurement_activity_inner_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
>

            <ImageView
                android:id="@+id/profile_measurement_activity_plus_weight"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.0" />

            <Button
                android:id="@+id/profile_measurement_activity_save_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_style1"
                android:text="Zapisz"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_measurement_activity_datepicker" />

            <TextView
...
